# memo-rs

./: .editorconfig  .env-example  .gitignore  Cargo.toml  README.md
frontend/: biome.json  package-lock.json  package.json
frontend/public/: manifest.json
frontend/public/assets/css/: style.css
frontend/public/assets/js/: create-album.js  delete-album.js  login.js  nav.js  photo-gallery.js  site.js  upload.js
frontend/scripts/: bundle-js.js
src/: config.rs  ctx.rs  error.rs  main.rs  run.rs
src/models/: login.rs  mod.rs  pagination.rs  params.rs  photos.rs  pref.rs  template.rs  user.rs
src/services/: auth.rs  captcha.rs  mod.rs  photos.rs  token.rs
src/web/: error.rs  index.rs  login.rs  logout.rs  mod.rs  policies.rs  pref.rs  routes.rs
src/web/albums/: add.rs  del.rs  edit.rs  listing.rs  mod.rs
src/web/middlewares/: album.rs  auth.rs  mod.rs  photo.rs  pref.rs
src/web/photos/: del.rs  listing.rs  mod.rs  upload.rs
templates/layout/: base.html  footer.html  nav.html
templates/pages/: error.html  index.html  new_album.html  photos.html  upload_photos.html
templates/widgets/: albums.html  confirm_delete_photo_form.html  delete_album_form.html  edit_album_controls.html  edit_album_form.html  edit_photos_controls.html  error.html  login_form.html  new_album_form.html  photo_grid.html  photo_grid_item.html  pre_delete_photo_form.html  set_theme.html
