[package]
name = "memo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
derive_more = "0.99.18"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
multer = "3.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.2"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
validator = { version = "0.16.1", features = ["derive"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
